- added: `ArrayBuffer.prototype.toBuffer()`
- added: `F.config['allow-compile']` can disable the whole compilation of static files
- added: `SchemaOptions.invalid(name, [value], [path], [index])` alias to `$.errors.push() + callback()`
- added: `SchemaOptions.success()` alias to `callback(SUCCESS(value))`
- added: `controller.success()` alias to `controller.json(SUCCESS(value))`

- updated: `sitemap` routing can contain an additional path, e.g. `#sitemapid/path/`
- updated: `F.localize()` supports sitemap routing
- updated: `F.merge()` supports sitemap routing
- updated: `F.map()` supports sitemap routing
- updated: `F.http(mode, [options], [middleware(listen)])` added a new argument `middleware`
- updated: `debug.js` now reads directories according to the config (author: @luoage)
- updated: config parser supports `config` sub-type
- updated: `controller.$exec()` --> `callback` is by default `controller.callback()`
- updated: `F.localize()` has enabled `compression` by default
- updated: HTTP server is listening after the framework is completely loaded

- fixed: `JSON` type in Total.js schemas
- fixed: responding on `range` header
- fixed: (IMPORTANT) `U.ls2()`
- fixed: `F.rmdir` removes all files and directories
- fixed: Date formatting with `a` value
- fixed: `F.path.mkdir()` in Windows (author: @molda)
- fixed: `F.restore()` in Windows (author: @molda)
- fixed: `MODEL()`, `MODULE()`, `INCLUDE()` now are direct aliases
- fixed: unit testing (author: @ckpiggy)
- fixed: a check for maximum length of request data
- fixed: `ArrayBuffer` in webosocket
- fixed: (IMPORTANT) `DatabaseBuilder.in()`

======= 2.8.0

- added: `NOSQL().restore()` restores a database (its package)
- added: Mail options support a new property `xoauth2` (it needs to contain a `BASE64` value) for sending emails via OAuth 2.0 tokens (more in docs)
- added: `F.path.mkdir(path)` creates all directories according to the path